# number-rust

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: number.rs
src/number/: tests.rs
